the planning page done

--- a/inc/assets/pgs/EmploiDuTemps.html
+++ b/inc/assets/pgs/EmploiDuTemps.html
@@ -206,8 +206,8 @@
 
                     .popup {
                         position:relative;
-                        width:75%;
-                        top:8%;
+                        width:60%;
+                        top:5%;
                         text-align:center;
                         border-radius: 10px;
                         background:rgb(240,240,240);
@@ -215,6 +215,7 @@
 
 
                     }
+
 
 
                     #tblDiv {
@@ -227,7 +228,7 @@
                         display: block;
                         overflow: auto;
                         width: 100%;
-                        height: 270px;
+                        height: 190px;
                       }
                       #tblDiv thead tr {
                         display: block;
@@ -254,12 +255,13 @@
                                   <div class="content">
                                       <div class="row">
 
-                                          <div class="col-xs-9">
-                                              <div class="numbers" id="popUpTcherName">
+                                          <div class="icon icon-info text-center " style="font-size:20px;">
+                                              <div class="" id="popUpTcherName">
 
 
                                               </div>
                                           </div>
+
                                       </div>
                                       <div class="footer">
                                           <hr />
@@ -276,8 +278,8 @@
                                     <div class="content">
                                         <div class="row">
 
-                                            <div class="col-xs-9">
-                                                <div class="numbers" id="popUpGrpName">
+                                            <div class="icon icon-info text-center" style="font-size:20px;">
+                                                <div class="" id="popUpGrpName">
 
 
                                                 </div>
@@ -298,8 +300,8 @@
                                     <div class="content">
                                         <div class="row">
 
-                                            <div class="col-xs-9">
-                                                <div class="numbers" id="popUpFlrName">
+                                            <div class="icon icon-info text-center" style="font-size:20px;">
+                                                <div class="" id="popUpFlrName">
 
 
                                                 </div>
@@ -324,8 +326,8 @@
                                   <div class="content">
                                       <div class="row">
 
-                                          <div class="col-xs-9">
-                                              <div class="numbers" id="popUpMdlName">
+                                          <div class="icon icon-info text-center" style="font-size:20px;">
+                                              <div class="" id="popUpMdlName">
 
 
                                               </div>
@@ -346,8 +348,8 @@
                                   <div class="content">
                                       <div class="row">
 
-                                          <div class="col-xs-9">
-                                              <div class="numbers" id="popUpDyName">
+                                          <div  class="icon icon-info text-center" style="font-size:20px;">
+                                              <div class="" id="popUpDyName">
 
 
                                               </div>
@@ -368,8 +370,8 @@
                                   <div class="content">
                                       <div class="row">
 
-                                          <div class="col-xs-9">
-                                              <div class="numbers" id="popUpTmeName">
+                                          <div class="icon icon-info text-center" style="font-size:20px;">
+                                              <div class="" id="popUpTmeName">
 
 
                                               </div>
@@ -396,36 +398,25 @@
                         <div class="col-md-12">
                             <div class="card">
                                 <div class="header">
-                                    <h4 class="title">Liste du Stagiers</h4>
+                                    <h5 class="stats" style="font-weight: bold;">Liste du Stagiers</h5>
                                 </div>
 
-                                <br>
 
                                 <!-- <div class="content table-responsive table-full-width" id="tblDiv" style="overflow-y:scroll; height:370px;" > -->
                                 <div class="content table-responsive table-full-width" id="tblDiv">
 
                                     <table class="table table-striped" id="tblDiv">
                                         <thead>
+                                            <th>ID</th>
                                             <th>Nom Prénom</th>
-                                            <th>Filière</th>
-                                            <th>Groupe</th>
-                                            <th>Statut</th>
-                                            <th>Points discipline</th>
-                                            <th>Billet</th>
-                                            <th>Stagiaire</th>
+                                            <th>CNI</th>
+                                            <th>Massar</th>
+                                            <th>Date d'Inscription</th>
+
                                         </thead>
                                         <tbody id="stdntsTblBdy">
-                                            <tr>
-                                                <td>BOURIR Karim</td>
-                                                <td>Équitation</td>
-                                                <td>A</td>
-                                                <td>Absent pendant 3 séance(s)</td>
-                                                <td>20</td>
-                                                <td><button type="submit" class="btn btn-success">Billet</button></td>
-                                                <td><a class="btn btn-info" href="DetailsStagaire.html">Détails</a></td>
 
-                                            </tr>
-                                            
+
 
 
                                         </tbody>
